upgrade dependencies and improvement